Fix: heights and overflows

--- a/src/components/style/Round.scss
+++ b/src/components/style/Round.scss
@@ -6,6 +6,7 @@
 
     width: 100%;
     aspect-ratio: 2;
+    max-height: calc(100vh - 1rem);
 
     @media screen and (max-width: 600px) {
         aspect-ratio: 1.75;
